styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap');

body {
    margin: 0;
    padding: 0;
    background-color: white;
}

a {
    color: inherit;
}

/* Nav Bar */

.navbar-brand {
    font-family: 'Dancing Script', 'Times New Roman', Times, serif, cursive;
    font-size: 30px;
}

.nav-link {
    text-decoration: none;
    color: white;
}

/* Carousel */
.slide {
    margin-top: 4rem;

}

.slide img {
    height: 33vh;
}

/* Card */

.card-me {
    margin: 0;
}

.container-card {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    padding: 0;
}

.container-card .box {
    position: relative;
    width: 20rem;
    height: 20rem;
    margin: 3rem;
}

.container-card .box:hover .imgBox {
    transform: translate(-1.5rem, -1.5rem);
}

.container-card .box:hover .content {
    box-shadow: 5px 5px 5px #999;
    transform: translate(4rem, 4rem);
}

.imgBox {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 2;
    transition: all 0.5s ease-in-out;
}

.imgBox img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    resize: both;
    border-radius: 1rem;
}

.container-card .box .content {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 0.5rem;
    display: flex;
    justify-content: center;
    background-color: #f5f5f5;
    z-index: 1;
    align-items: flex-end;
    text-align: center;
    border-radius: 1rem;
    transition: 0.5s ease-in-out;
}

.container-card .box .content h2 {
    display: block;
    font-size: 2rem;
    color: #111;
    font-weight: 500;
    line-height: 2rem;
    letter-spacing: 1px;
}

.container-card .box .content span {
    color: #555;
    font-size: 1.4rem;
    font-weight: 300;
    letter-spacing: 2px;
}

/* Fin Card */

.width-max {
    width: 100vw;
}

/* Iconos */
div i {
    text-decoration: none;
    color: rgb(33,37,41);
    padding-left: 2rem;
    padding-top: 1.5rem;
    padding-bottom: 3rem;
}

/* Cards de Lenguajes usados */

.conocimientos {
    background-color: #066699 !important;
}

.text-title {
    text-align: center;
    margin-bottom: 5rem;
    color:white;
    text-shadow: 1px 1px 2px black;
}

div .card {
    margin-bottom: 5rem;
    margin: 1rem;
    width: 15rem;
    height: 23rem;
    transition: all 0.5s ease-in-out;
}

div div .card-img-top {
    height: 12rem;
}

div .card:hover {
    box-shadow: 5px 5px 5px #02416d;
    transform: translate(-0.5rem, -0.5rem);
}

.formulario {
    margin-bottom: 5rem;
}

.formulario .text-form {
    text-align: center;
    justify-content: center;
    line-height: 5rem;
}

div .btn {
    background-color: #6fb4e5;

}

div .btn:hover {
    background-color: #46a3e6;
    color: white;
    
}

footer {
    padding: 1rem;
    background-color: #46a3e6 !important;
    color: white;
    text-decoration: none !important;
}

footer .conteiner div a {
    text-decoration: none;
    color: white;
    text-decoration-color: white;
    
}

footer .left {
    display: inline;
    text-decoration: none;
}

footer .right {
    display: inline;
    text-decoration: none;
    float: right;
}

footer p {
    margin: 0px;
    display: inline;
}

footer .sep {
    margin:0px 5px;
}

@media screen and (max-width: 450px) {

    .navbar-brand {
        font-family: 'Dancing Script', 'Times New Roman', Times, serif, cursive;
        font-size: 20px;
    }

    .slide {
        margin-top: 3.5rem;
    }

    .slide img {
        height: 40vw;
    }
    
    .container-card .box {
        width: 25rem;
        height: 20rem;
        margin: 2rem;
    }

    .container-card .box:hover .imgBox {
        transform: translate(0,5rem, -1.5rem);
    }
    
    .container-card .box:hover .content {
        box-shadow: 5px 5px 5px #999;
        transform: translate(0, 2rem);
    }

    .container-card .box .content h2 {
        font-size: 1.4rem;
        font-weight: 0,5rem;
        line-height: 1rem;
        letter-spacing: 1px;
    }
    
    .container-card .box .content span {
        color: #555;
        font-size: 1rem;
        font-weight: 0,5rem;
        letter-spacing: 1px;
    }

    .formulario .text-form {
        font-size: 1,5rem;
        line-height: 4rem;
    }

    footer {
        padding-bottom: 2rem;
    }

    footer .left {
        display: block;
        text-decoration: none;
        
    }

    footer .right {
        float: left;
        display: block;
        text-decoration: none;
    }
}

